[gd_scene load_steps=5 format=3 uid="uid://b2d6v2gar3raa"]

[ext_resource type="MeshLibrary" uid="uid://blsb1ottgv77w" path="res://TileWorld/Tiles/VisibleBlocks/base_block.tres" id="1_1fx3s"]
[ext_resource type="Script" path="res://Map/grid_map.gd" id="2_js2qe"]
[ext_resource type="MeshLibrary" uid="uid://v323yiokpytu" path="res://TileWorld/Tiles/Borders/border.tres" id="3_2ujc0"]
[ext_resource type="MeshLibrary" uid="uid://0gdkm1xe0r8a" path="res://TileWorld/Tiles/Highlighters/HighlightTiles2.tres" id="3_jvci0"]

[node name="BattleMap" type="GridMap"]
mesh_library = ExtResource("1_1fx3s")
cell_size = Vector3(1, 1, 1)
collision_layer = 0
collision_mask = 0
data = {
"cells": PackedInt32Array(65535, 0, 0, 65534, 0, 0, 65534, 65535, 0, 0, 1, 0, 65535, 1, 0, 65534, 1, 0, 65534, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 65535, 65535, 0, 65535, 65534, 0, 0, 65535, 0, 0, 65534, 0, 0, 0, 0, 1, 65534, 0, 65534, 65533, 0, 65533, 65534, 0, 65533, 65535, 0, 65533, 0, 0, 65533, 1, 0, 65533, 2, 0, 1, 2, 0, 0, 2, 0, 65534, 2, 0, 65535, 65533, 0, 65535, 2, 0, 65533, 65533, 0, 2, 65533, 0, 1, 65533, 0, 0, 65533, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 65534, 0, 2, 2, 0, 65538, 65532, 0, 65537, 65532, 0, 65536, 65532, 0, 131071, 65532, 0, 131070, 65532, 0, 131069, 65532, 0, 65539, 65533, 0, 65539, 65534, 0, 65539, 65535, 0, 131072, 65532, 0, 196608, 65532, 0, 262144, 65532, 0, 327680, 65532, 0, 393216, 65532, 0, 458752, 65532, 0, 524288, 65532, 0, 589824, 65532, 0, 655360, 65532, 0, 720896, 65532, 0, 196608, 0, 0, 196609, 0, 0, 196609, 1, 0, 196608, 1, 0, 262143, 1, 0, 262143, 0, 0, 262143, 65535, 0, 196608, 65535, 0, 196609, 65535, 0, 3, 0, 0, 3, 2, 0, 3, 3, 0, 3, 1, 0, 2, 3, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65535, 3, 0, 65534, 3, 0, 65533, 3, 0, 0, 3, 0, 1, 3, 0, 65534, 4, 0, 65533, 4, 0, 3, 4, 0, 786432, 65532, 0, 3, 65531, 0, 4, 65531, 0, 4, 65532, 0, 5, 65532, 0, 5, 65533, 0, 5, 65534, 0, 5, 65535, 0, 4, 65535, 0, 4, 0, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 4, 5, 0, 4, 6, 0, 3, 6, 0, 3, 7, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 5, 8, 0, 5, 7, 0, 6, 6, 0, 6, 4, 0, 6, 3, 0, 5, 1, 0, 5, 0, 0, 0, 5, 0, 65535, 7, 0, 65534, 7, 0, 65534, 8, 0, 65533, 8, 0, 65533, 7, 0, 65532, 7, 0, 65531, 7, 0, 65531, 6, 0, 65531, 5, 0, 65532, 5, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 0, 8, 0, 65535, 8, 0, 65530, 5, 0, 65529, 4, 0, 65528, 3, 0, 65528, 2, 0, 65528, 1, 0, 65529, 2, 0, 65529, 3, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 2, 8, 0, 65532, 2, 0, 65531, 2, 0, 65530, 2, 0, 65529, 6, 0, 65530, 8, 0, 65531, 9, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 2, 7, 0, 2, 5, 0, 65533, 65532, 0, 65531, 65533, 0, 65530, 65534, 0, 65529, 0, 0, 65528, 4, 0, 65529, 5, 0, 65530, 7, 0, 65532, 6, 0, 65524, 1, 0, 65524, 2, 0, 65524, 3, 0, 65524, 4, 0, 65524, 5, 0, 65524, 6, 0, 65524, 7, 0, 65524, 8, 0, 65524, 9, 0, 65524, 10, 0, 65525, 1, 0, 65525, 2, 0, 65525, 3, 0, 65525, 4, 0, 65525, 5, 0, 65525, 6, 0, 65525, 7, 0, 65525, 8, 0, 65525, 9, 0, 65525, 10, 0, 65526, 1, 0, 65526, 2, 0, 65526, 3, 0, 65526, 4, 0, 65526, 5, 0, 65526, 6, 0, 65526, 7, 0, 65526, 8, 0, 65526, 9, 0, 65526, 10, 0, 65527, 1, 0, 65527, 2, 0, 65527, 3, 0, 65527, 4, 0, 65527, 5, 0, 65527, 6, 0, 65527, 7, 0, 65527, 8, 0, 65527, 9, 0, 65527, 10, 0, 65528, 5, 0, 65528, 6, 0, 65528, 7, 0, 65528, 8, 0, 65528, 9, 0, 65528, 10, 0, 65529, 1, 0, 65529, 7, 0, 65529, 8, 0, 65529, 9, 0, 65529, 10, 0, 65530, 1, 0, 65530, 3, 0, 65530, 4, 0, 65530, 6, 0, 65530, 9, 0, 65530, 10, 0, 65531, 1, 0, 65531, 3, 0, 65531, 4, 0, 65531, 8, 0, 65531, 10, 0, 65532, 1, 0, 65532, 3, 0, 65532, 4, 0, 65532, 8, 0, 65532, 9, 0, 65533, 5, 0, 65533, 6, 0, 65533, 9, 0, 65534, 5, 0, 65534, 6, 0, 65534, 9, 0, 65535, 5, 0, 65535, 6, 0, 65535, 9, 0, 65535, 10, 0, 0, 6, 0, 0, 7, 0, 0, 10, 0, 1, 10, 0, 2, 6, 0, 2, 10, 0, 3, 5, 0, 3, 8, 0, 3, 9, 0, 3, 10, 0, 4, 10, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0, 5, 6, 0, 5, 9, 0, 5, 10, 0, 65524, 65531, 0, 65524, 65532, 0, 65525, 65532, 0, 65526, 65533, 0, 65527, 65533, 0, 65528, 65534, 0, 65529, 65535, 0, 65530, 0, 0, 65531, 0, 0, 65523, 65530, 0, 65523, 65531, 0, 65523, 65532, 0, 65523, 65533, 0, 65523, 65534, 0, 65523, 65535, 0, 65523, 0, 0, 65523, 1, 0, 65523, 2, 0, 65524, 65530, 0, 65524, 65533, 0, 65524, 65534, 0, 65524, 65535, 0, 65524, 0, 0, 65525, 65530, 0, 65525, 65531, 0, 65525, 65533, 0, 65525, 65534, 0, 65525, 65535, 0, 65525, 0, 0, 65526, 65530, 0, 65526, 65531, 0, 65526, 65532, 0, 65526, 65534, 0, 65526, 65535, 0, 65526, 0, 0, 65527, 65530, 0, 65527, 65531, 0, 65527, 65532, 0, 65527, 65534, 0, 65527, 65535, 0, 65527, 0, 0, 65528, 65530, 0, 65528, 65531, 0, 65528, 65532, 0, 65528, 65533, 0, 65528, 65535, 0, 65528, 0, 0, 65529, 65530, 0, 65529, 65531, 0, 65529, 65532, 0, 65529, 65533, 0, 65529, 65534, 0, 65530, 65530, 0, 65530, 65531, 0, 65530, 65532, 0, 65530, 65533, 0, 65530, 65535, 0, 65531, 65530, 0, 65531, 65531, 0, 65531, 65532, 0, 65531, 65534, 0, 65531, 65535, 0, 65532, 65530, 0, 65532, 65531, 0, 65532, 65532, 0, 65532, 65533, 0, 65532, 65534, 0, 65532, 65535, 0, 65532, 0, 0, 393217, 65534, 0)
}
script = ExtResource("2_js2qe")
metadata/_editor_floor_ = Vector3(0, 6, 0)

[node name="BorderMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_2ujc0")
cell_size = Vector3(1, 1, 1)
collision_layer = 2
collision_mask = 2
data = {
"cells": PackedInt32Array(3, 0, 0, 3, 1, 0, 3, 2, 0)
}
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="HoverHighlight" type="GridMap" parent="."]
mesh_library = ExtResource("3_jvci0")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 0
collision_mask = 0
metadata/_editor_floor_ = Vector3(0, 2, 0)

[node name="MoveHighlight" type="GridMap" parent="."]
mesh_library = ExtResource("3_jvci0")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 0
collision_mask = 0
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
omni_range = 10.0
